--- a/src/public/control.html
+++ b/src/public/control.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -9,30 +8,40 @@
 <body>
   <h1>Control Page</h1>
   <div id="playlist"></div>
+  <div id="controls" style="margin-top: 20px; display: none;">
+    <button id="prev" onclick="sendAction('prevPage')">Previous Page</button>
+    <button id="next" onclick="sendAction('nextPage')">Next Page</button>
+    <button id="pause" onclick="sendAction('pauseVideo')">Pause Video</button>
+    <button id="play" onclick="sendAction('playVideo')">Play Video</button>
+  </div>
 
   <script>
     const ws = new WebSocket('ws://localhost/ws');
-    const playlistUrl = 'http://localhost/playlist.json';
+    const playlistUrl = '/playlist.json';
+    let currentItem = null;
 
     async function fetchPlaylist() {
       const response = await fetch(playlistUrl);
       const data = await response.json();
-      renderPlaylist(data);
+      renderPlaylist(data.playlist);
     }
 
-    function renderPlaylist(data) {
+    function renderPlaylist(playlist) {
       const container = document.getElementById('playlist');
-      data.playlist.forEach(item => {
+      playlist.forEach(item => {
         const button = document.createElement('button');
         button.innerText = `Play ${item.name}`;
-        button.onclick = () => sendAction('playItem', item.id);
+        button.onclick = () => {
+          currentItem = item;
+          sendAction('playItem', item.id);
+          document.getElementById('controls').style.display = item.type === 'pdf' ? 'block' : 'none';
+        };
         container.appendChild(button);
       });
     }
 
-    function sendAction(action, itemId, extra = null) {
+    function sendAction(action, itemId = null) {
       const message = { action, itemId };
-      if (extra) message.extra = extra;
       ws.send(JSON.stringify(message));
     }
 
