adding jump buttons and auto play

--- a/src/public/player.html
+++ b/src/public/player.html
@@ -46,6 +46,13 @@
         case 'playVideo':
           videoPlayer.play();
           break;
+        case 'loopVideo':
+          videoPlayer.loop = !videoPlayer.loop;
+          break;
+        case 'restartVideo':
+          videoPlayer.currentTime = 0;
+          videoPlayer.play();
+          break;
       }
     }
 
