--- a/src/public/control.html
+++ b/src/public/control.html
@@ -8,11 +8,15 @@
 <body>
   <h1>Control Page</h1>
   <div id="playlist"></div>
-  <div id="controls" style="margin-top: 20px; display: none;">
+  <div id="pdf-controls" style="margin-top: 20px; display: none;">
     <button id="prev" onclick="sendAction('prevPage')">Previous Page</button>
     <button id="next" onclick="sendAction('nextPage')">Next Page</button>
-    <button id="pause" onclick="sendAction('pauseVideo')">Pause Video</button>
-    <button id="play" onclick="sendAction('playVideo')">Play Video</button>
+  </div>
+  <div id="video-controls" style="margin-top: 20px; display: none;">
+    <button id="play" onclick="sendAction('playVideo')">Play</button>
+    <button id="pause" onclick="sendAction('pauseVideo')">Pause</button>
+    <button id="loop" onclick="sendAction('loopVideo')">Toggle Loop</button>
+    <button id="restart" onclick="sendAction('restartVideo')">Restart</button>
   </div>
 
   <script>
@@ -34,7 +38,7 @@
         button.onclick = () => {
           currentItem = item;
           sendAction('playItem', item.id);
-          document.getElementById('controls').style.display = item.type === 'pdf' ? 'block' : 'none';
+          updateControls(item.type);
         };
         container.appendChild(button);
       });
@@ -45,7 +49,13 @@
       ws.send(JSON.stringify(message));
     }
 
+    function updateControls(type) {
+      document.getElementById('pdf-controls').style.display = type === 'pdf' ? 'block' : 'none';
+      document.getElementById('video-controls').style.display = type === 'video' ? 'block' : 'none';
+    }
+
     fetchPlaylist();
   </script>
 </body>
 </html>
+
