--- a/src/public/player.html
+++ b/src/public/player.html
@@ -4,18 +4,65 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Player Page</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 0;
+    }
+    #pdfContainer {
+      width: 100%;
+      height: 80vh;
+      background: #ccc;
+      overflow: auto;
+      display: none;
+    }
+    canvas {
+      display: block;
+      margin: auto;
+    }
+    #videoPlayer {
+      width: 100%;
+      height: 80vh;
+      display: none;
+    }
+    #controls {
+      margin: 10px;
+      text-align: center;
+    }
+    button {
+      margin: 5px;
+      padding: 10px;
+      font-size: 14px;
+      cursor: pointer;
+    }
+    #title {
+      text-align: center;
+    }
+  </style>
 </head>
 <body>
   <h1 id="title">Waiting for Content...</h1>
-  <iframe id="pdfViewer" style="display: none; width: 100%; height: 80vh;"></iframe>
-  <video id="videoPlayer" controls autoplay style="display: none; width: 100%;"></video>
+  <div id="controls">
+    <button onclick="goToPreviousPage()" id="prevPage" style="display: none;">Previous Page</button>
+    <button onclick="goToNextPage()" id="nextPage" style="display: none;">Next Page</button>
+    <span id="pageInfo" style="display: none;">Page: <span id="currentPage">1</span> / <span id="totalPages">0</span></span>
+  </div>
+  <div id="pdfContainer"></div>
+  <video id="videoPlayer" controls autoplay></video>
 
-  <script>
+  <script type="module">
+    import * as pdfjsLib from 'https://mozilla.github.io/pdf.js/build/pdf.mjs';
+
     const ws = new WebSocket('ws://localhost/ws'); // Replace with actual WebSocket URL
-    const pdfViewer = document.getElementById('pdfViewer');
+    const pdfContainer = document.getElementById('pdfContainer');
     const videoPlayer = document.getElementById('videoPlayer');
     const title = document.getElementById('title');
+    const currentPageElement = document.getElementById('currentPage');
+    const totalPagesElement = document.getElementById('totalPages');
+    let pdfDoc = null;
     let currentPage = 1;
+    const scale = 1.5; // Adjust for zoom level
     let currentPdfSource = '';
 
     ws.onmessage = (event) => {
@@ -35,10 +82,10 @@
             });
           break;
         case 'nextPage':
-          changePage(1);
+          goToNextPage();
           break;
         case 'prevPage':
-          changePage(-1);
+          goToPreviousPage();
           break;
         case 'goToPage':
           if (currentPdfSource && page) jumpToPage(page);
@@ -62,29 +109,73 @@
     function playPdf(item) {
       currentPdfSource = item.source;
       currentPage = 1;
-      pdfViewer.src = `${currentPdfSource}#page=${currentPage}`;
-      pdfViewer.style.display = 'block';
-      videoPlayer.style.display = 'none';
+      document.getElementById('prevPage').style.display = 'inline';
+      document.getElementById('nextPage').style.display = 'inline';
+      document.getElementById('pageInfo').style.display = 'inline';
       title.innerText = `Now Playing: ${item.name}`;
-    }
-
-    function changePage(offset) {
-      currentPage += offset;
-      if (currentPage < 1) currentPage = 1;
-      pdfViewer.src = `${currentPdfSource}#page=${currentPage}`;
-    }
-
-    function jumpToPage(page) {
-      currentPage = page;
-      pdfViewer.src = `${currentPdfSource}#page=${currentPage}`;
+      videoPlayer.style.display = 'none';
+      pdfContainer.style.display = 'block';
+      loadPdf(currentPdfSource);
     }
 
     function playVideo(item) {
       videoPlayer.src = item.source;
+      videoPlayer.volume = 1.0; // Set volume to maximum
       videoPlayer.style.display = 'block';
-      pdfViewer.style.display = 'none';
+      pdfContainer.style.display = 'none';
+      document.getElementById('prevPage').style.display = 'none';
+      document.getElementById('nextPage').style.display = 'none';
+      document.getElementById('pageInfo').style.display = 'none';
       title.innerText = `Now Playing: ${item.name}`;
       videoPlayer.play();
+    }
+
+    // Load PDF using PDF.js
+    async function loadPdf(url) {
+      pdfDoc = await pdfjsLib.getDocument(url).promise;
+      totalPagesElement.textContent = pdfDoc.numPages;
+      renderPage(currentPage);
+    }
+
+    // Render a specific PDF page
+    async function renderPage(pageNum) {
+      const page = await pdfDoc.getPage(pageNum);
+      const viewport = page.getViewport({ scale });
+      const canvas = document.createElement('canvas');
+      const context = canvas.getContext('2d');
+
+      canvas.height = viewport.height;
+      canvas.width = viewport.width;
+
+      pdfContainer.innerHTML = ''; // Clear existing content
+      pdfContainer.appendChild(canvas);
+
+      const renderContext = {
+        canvasContext: context,
+        viewport: viewport
+      };
+      await page.render(renderContext);
+
+      currentPageElement.textContent = pageNum;
+    }
+
+    // Navigation functions
+    function goToPreviousPage() {
+      if (currentPage <= 1) return;
+      currentPage--;
+      renderPage(currentPage);
+    }
+
+    function goToNextPage() {
+      if (currentPage >= pdfDoc.numPages) return;
+      currentPage++;
+      renderPage(currentPage);
+    }
+
+    function jumpToPage(page) {
+      if (page < 1 || page > pdfDoc.numPages) return;
+      currentPage = page;
+      renderPage(currentPage);
     }
   </script>
 </body>
