--- a/src/public/player.html
+++ b/src/public/player.html
@@ -48,18 +48,22 @@
     <button onclick="goToNextPage()" id="nextPage" style="display: none;">Next Page</button>
     <span id="pageInfo" style="display: none;">Page: <span id="currentPage">1</span> / <span id="totalPages">0</span></span>
   </div>
-  <div id="pdfContainer"></div>
+  <div id="pdfContainer">
+    <canvas id="pdfCanvas"></canvas>
+  </div>
   <video id="videoPlayer" controls autoplay></video>
 
   <script type="module">
-    import * as pdfjsLib from 'https://mozilla.github.io/pdf.js/build/pdf.mjs';
+    import { getDocument } from 'https://mozilla.github.io/pdf.js/build/pdf.mjs';
 
     const ws = new WebSocket('ws://localhost/ws'); // Replace with actual WebSocket URL
     const pdfContainer = document.getElementById('pdfContainer');
+    const pdfCanvas = document.getElementById('pdfCanvas');
     const videoPlayer = document.getElementById('videoPlayer');
     const title = document.getElementById('title');
     const currentPageElement = document.getElementById('currentPage');
     const totalPagesElement = document.getElementById('totalPages');
+    const canvasContext = pdfCanvas.getContext('2d');
     let pdfDoc = null;
     let currentPage = 1;
     const scale = 1.5; // Adjust for zoom level
@@ -132,7 +136,7 @@
 
     // Load PDF using PDF.js
     async function loadPdf(url) {
-      pdfDoc = await pdfjsLib.getDocument(url).promise;
+      pdfDoc = await getDocument(url).promise;
       totalPagesElement.textContent = pdfDoc.numPages;
       renderPage(currentPage);
     }
@@ -141,18 +145,15 @@
     async function renderPage(pageNum) {
       const page = await pdfDoc.getPage(pageNum);
       const viewport = page.getViewport({ scale });
-      const canvas = document.createElement('canvas');
-      const context = canvas.getContext('2d');
 
-      canvas.height = viewport.height;
-      canvas.width = viewport.width;
+      // Adjust canvas size
+      pdfCanvas.height = viewport.height;
+      pdfCanvas.width = viewport.width;
 
-      pdfContainer.innerHTML = ''; // Clear existing content
-      pdfContainer.appendChild(canvas);
-
+      // Render PDF page into canvas context
       const renderContext = {
-        canvasContext: context,
-        viewport: viewport
+        canvasContext,
+        viewport
       };
       await page.render(renderContext);
 
