adding jump buttons and auto play

--- a/src/public/player.html
+++ b/src/public/player.html
@@ -3,18 +3,19 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Player Page</title>
+  <title>Player</title>
   <style>
     body {
-      font-family: Arial, sans-serif;
       margin: 0;
       padding: 0;
+      background: #000;
+      overflow: hidden;
     }
     #pdfContainer {
       width: 100%;
-      height: 80vh;
-      background: #ccc;
-      overflow: auto;
+      height: 100vh;
+      background: #000;
+      overflow: hidden;
       display: none;
     }
     canvas {
@@ -23,35 +24,16 @@
     }
     #videoPlayer {
       width: 100%;
-      height: 80vh;
+      height: 100vh;
       display: none;
-    }
-    #controls {
-      margin: 10px;
-      text-align: center;
-    }
-    button {
-      margin: 5px;
-      padding: 10px;
-      font-size: 14px;
-      cursor: pointer;
-    }
-    #title {
-      text-align: center;
     }
   </style>
 </head>
 <body>
-  <h1 id="title">Waiting for Content...</h1>
-  <div id="controls">
-    <button onclick="goToPreviousPage()" id="prevPage" style="display: none;">Previous Page</button>
-    <button onclick="goToNextPage()" id="nextPage" style="display: none;">Next Page</button>
-    <span id="pageInfo" style="display: none;">Page: <span id="currentPage">1</span> / <span id="totalPages">0</span></span>
-  </div>
   <div id="pdfContainer">
     <canvas id="pdfCanvas"></canvas>
   </div>
-  <video id="videoPlayer" controls autoplay></video>
+  <video id="videoPlayer" autoplay></video>
 
   <script type="module">
     import { GlobalWorkerOptions, getDocument } from 'https://mozilla.github.io/pdf.js/build/pdf.mjs';
@@ -63,9 +45,6 @@
     const pdfContainer = document.getElementById('pdfContainer');
     const pdfCanvas = document.getElementById('pdfCanvas');
     const videoPlayer = document.getElementById('videoPlayer');
-    const title = document.getElementById('title');
-    const currentPageElement = document.getElementById('currentPage');
-    const totalPagesElement = document.getElementById('totalPages');
     const canvasContext = pdfCanvas.getContext('2d');
     let pdfDoc = null;
     let currentPage = 1;
@@ -116,10 +95,6 @@
     function playPdf(item) {
       currentPdfSource = item.source;
       currentPage = 1;
-      document.getElementById('prevPage').style.display = 'inline';
-      document.getElementById('nextPage').style.display = 'inline';
-      document.getElementById('pageInfo').style.display = 'inline';
-      title.innerText = `Now Playing: ${item.name}`;
       videoPlayer.style.display = 'none';
       pdfContainer.style.display = 'block';
       loadPdf(currentPdfSource);
@@ -130,16 +105,11 @@
       videoPlayer.volume = 1.0; // Set volume to maximum
       videoPlayer.style.display = 'block';
       pdfContainer.style.display = 'none';
-      document.getElementById('prevPage').style.display = 'none';
-      document.getElementById('nextPage').style.display = 'none';
-      document.getElementById('pageInfo').style.display = 'none';
-      title.innerText = `Now Playing: ${item.name}`;
       videoPlayer.play();
     }
 
     async function loadPdf(url) {
       pdfDoc = await getDocument(url).promise;
-      totalPagesElement.textContent = pdfDoc.numPages;
       renderPage(currentPage);
     }
 
@@ -158,8 +128,6 @@
         viewport
       };
       await page.render(renderContext);
-
-      currentPageElement.textContent = pageNum;
     }
 
     function goToPreviousPage() {
