--- a/src/public/player.html
+++ b/src/public/player.html
@@ -38,7 +38,6 @@
   <script type="module">
     import { GlobalWorkerOptions, getDocument } from 'https://mozilla.github.io/pdf.js/build/pdf.mjs';
 
-    // Set the worker script URL
     GlobalWorkerOptions.workerSrc = 'https://mozilla.github.io/pdf.js/build/pdf.worker.mjs';
 
     const ws = new WebSocket('ws://localhost/ws'); // Replace with actual WebSocket URL
@@ -50,9 +49,25 @@
     let currentPage = 1;
     const scale = 1.5; // Adjust for zoom level
     let currentPdfSource = '';
+    let sessionCode = null;
+
+    // Prompt for session code
+    function joinSession() {
+      sessionCode = prompt("Enter Session Code to Join:");
+      if (!sessionCode) {
+        alert("Session code is required!");
+        joinSession(); // Retry until a code is entered
+      }
+    }
+
+    joinSession();
 
     ws.onmessage = (event) => {
       const message = JSON.parse(event.data);
+      if (message.code !== sessionCode) {
+        console.warn("Ignored message for a different session:", message);
+        return;
+      }
       handleAction(message);
     };
 
@@ -67,27 +82,8 @@
               else if (item.type === 'video') playVideo(item);
             });
           break;
-        case 'nextPage':
-          goToNextPage();
-          break;
-        case 'prevPage':
-          goToPreviousPage();
-          break;
         case 'goToPage':
           if (currentPdfSource && page) jumpToPage(page);
-          break;
-        case 'pauseVideo':
-          videoPlayer.pause();
-          break;
-        case 'playVideo':
-          videoPlayer.play();
-          break;
-        case 'loopVideo':
-          videoPlayer.loop = !videoPlayer.loop;
-          break;
-        case 'restartVideo':
-          videoPlayer.currentTime = 0;
-          videoPlayer.play();
           break;
       }
     }
@@ -118,28 +114,14 @@
       const page = await pdfDoc.getPage(pageNum);
       const viewport = page.getViewport({ scale });
 
-      // Adjust canvas size
       pdfCanvas.height = viewport.height;
       pdfCanvas.width = viewport.width;
 
-      // Render PDF page into canvas context
       const renderContext = {
         canvasContext,
         viewport
       };
       await page.render(renderContext);
-    }
-
-    function goToPreviousPage() {
-      if (currentPage <= 1) return;
-      currentPage--;
-      renderPage(currentPage);
-    }
-
-    function goToNextPage() {
-      if (currentPage >= pdfDoc.numPages) return;
-      currentPage++;
-      renderPage(currentPage);
     }
 
     function jumpToPage(page) {
@@ -153,3 +135,4 @@
   </script>
 </body>
 </html>
+
