--- a/src/public/control.html
+++ b/src/public/control.html
@@ -4,54 +4,66 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Control Page</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <style>
     body {
-      font-family: Arial, sans-serif;
-      margin: 20px;
+      background-color: #f8f9fa;
     }
-    #sessionCode {
-      font-size: 18px;
+    .session-code {
+      font-size: 1.2rem;
       font-weight: bold;
-      margin-bottom: 10px;
     }
     .playlist-item {
+      margin-bottom: 15px;
+      padding: 15px;
       border: 1px solid #ddd;
-      padding: 10px;
-      margin: 10px 0;
-      border-radius: 5px;
-      background-color: #f9f9f9;
+      border-radius: 8px;
+      background-color: #fff;
+      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     }
-    button {
-      margin: 5px;
-      padding: 10px;
-      font-size: 14px;
-      cursor: pointer;
+    .playlist-item button {
+      margin: 5px 0;
     }
-    ul {
+    .specific-pages {
       list-style: none;
       padding: 0;
     }
-    li {
+    .specific-pages li {
       margin-bottom: 5px;
+    }
+    .video-controls button {
+      margin: 5px;
     }
   </style>
 </head>
 <body>
-  <h1>Control Page</h1>
-  <div id="sessionCode">Session Code: Not Generated</div>
-  <button onclick="generateSessionCode()">Generate Session Code</button>
-  <div id="playlist"></div>
+  <div class="container mt-4">
+    <div class="row">
+      <div class="col text-center">
+        <h1>Broadcast Controller</h1>
+        <p class="session-code" id="sessionCode">Session Code: Not Generated</p>
+        <button class="btn btn-primary btn-lg" onclick="generateSessionCode()">Generate Session Code</button>
+      </div>
+    </div>
+    <div class="row mt-4">
+      <div class="col">
+        <div id="playlist" class="d-flex flex-column"></div>
+      </div>
+    </div>
+  </div>
 
   <script>
     const ws = new WebSocket('ws://localhost/ws'); // Replace with actual WebSocket URL
     let sessionCode = null;
 
+    // Generate a new session code
     function generateSessionCode() {
       sessionCode = Math.random().toString(36).substring(2, 10).toUpperCase();
       document.getElementById('sessionCode').innerText = `Session Code: ${sessionCode}`;
       ws.send(JSON.stringify({ action: 'createSession', code: sessionCode }));
     }
 
+    // Render playlist items
     function renderPlaylist(playlist) {
       const container = document.getElementById('playlist');
       container.innerHTML = ''; // Clear previous playlist
@@ -60,7 +72,9 @@
         const listItem = document.createElement('div');
         listItem.className = 'playlist-item';
 
+        // Main play button
         const mainButton = document.createElement('button');
+        mainButton.className = 'btn btn-success btn-block w-100';
         mainButton.innerText = `Play ${item.name}`;
         mainButton.onclick = () => {
           ws.send(JSON.stringify({
@@ -72,11 +86,14 @@
 
         listItem.appendChild(mainButton);
 
+        // Add specific page buttons for PDFs
         if (item.type === 'pdf' && item.specificPages) {
           const ul = document.createElement('ul');
+          ul.className = 'specific-pages mt-2';
           item.specificPages.forEach(page => {
             const li = document.createElement('li');
             const pageButton = document.createElement('button');
+            pageButton.className = 'btn btn-outline-secondary btn-sm';
             pageButton.innerText = `${page.name} (Page ${page.page})`;
             pageButton.onclick = () => {
               ws.send(JSON.stringify({
@@ -89,10 +106,15 @@
             ul.appendChild(li);
           });
           listItem.appendChild(ul);
-        } else if (item.type === 'video') {
+        }
+
+        // Add video controls
+        if (item.type === 'video') {
           const videoControls = document.createElement('div');
+          videoControls.className = 'video-controls mt-2';
 
           const pauseButton = document.createElement('button');
+          pauseButton.className = 'btn btn-outline-warning btn-sm';
           pauseButton.innerText = 'Pause Video';
           pauseButton.onclick = () => {
             ws.send(JSON.stringify({
@@ -102,6 +124,7 @@
           };
 
           const loopButton = document.createElement('button');
+          loopButton.className = 'btn btn-outline-info btn-sm';
           loopButton.innerText = 'Toggle Loop';
           loopButton.onclick = () => {
             ws.send(JSON.stringify({
@@ -111,6 +134,7 @@
           };
 
           const restartButton = document.createElement('button');
+          restartButton.className = 'btn btn-outline-danger btn-sm';
           restartButton.innerText = 'Restart Video';
           restartButton.onclick = () => {
             ws.send(JSON.stringify({
@@ -129,13 +153,16 @@
       });
     }
 
+    // Fetch playlist and render
     async function fetchPlaylist() {
       const response = await fetch('/playlist.json');
       const data = await response.json();
       renderPlaylist(data.playlist);
     }
 
+    // Fetch playlist on load
     fetchPlaylist();
   </script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
