adding real urls

--- a/src/public/control.html
+++ b/src/public/control.html
@@ -53,7 +53,7 @@
   </div>
 
   <script>
-    const ws = new WebSocket('ws://localhost/ws'); // Replace with actual WebSocket URL
+    const ws = new WebSocket('ws://it.bisds.org/ws'); // Replace with actual WebSocket URL
     let sessionCode = null;
 
     // Generate a new session code
