--- a/src/public/player.html
+++ b/src/public/player.html
@@ -40,7 +40,7 @@
 
     GlobalWorkerOptions.workerSrc = 'https://mozilla.github.io/pdf.js/build/pdf.worker.mjs';
 
-    const ws = new WebSocket('ws://localhost/ws'); // Replace with actual WebSocket URL
+    const ws = new WebSocket('ws://it.bisds.org/ws'); // Replace with actual WebSocket URL
     const pdfContainer = document.getElementById('pdfContainer');
     const pdfCanvas = document.getElementById('pdfCanvas');
     const videoPlayer = document.getElementById('videoPlayer');
