--- a/src/public/player.html
+++ b/src/public/player.html
@@ -38,32 +38,33 @@
   <script type="module">
     import { GlobalWorkerOptions, getDocument } from 'https://mozilla.github.io/pdf.js/build/pdf.mjs';
 
-    // Configure the PDF.js worker script
     GlobalWorkerOptions.workerSrc = 'https://mozilla.github.io/pdf.js/build/pdf.worker.mjs';
 
-    const ws = new WebSocket('ws://it.bisds.org/ws'); // Replace with your WebSocket URL
+    const ws = new WebSocket('ws://it.bisds.org/ws');
     const pdfContainer = document.getElementById('pdfContainer');
     const pdfCanvas = document.getElementById('pdfCanvas');
     const videoPlayer = document.getElementById('videoPlayer');
     const canvasContext = pdfCanvas.getContext('2d');
     let pdfDoc = null;
     let currentPage = 1;
-    const scale = 1.5; // Adjust for zoom level
+    const scale = 1.5;
     let currentPdfSource = '';
-    let sessionCode = null;
+    let sessionCode = localStorage.getItem('sessionCode');
 
-    // Prompt the user to enter a session code
     function joinSession() {
-      sessionCode = prompt("Enter Session Code to Join:");
       if (!sessionCode) {
-        alert("Session code is required!");
-        joinSession(); // Retry until a code is entered
+        sessionCode = prompt("Enter Session Code to Join:");
+        if (!sessionCode) {
+          alert("Session code is required!");
+          joinSession();
+        } else {
+          localStorage.setItem('sessionCode', sessionCode);
+        }
       }
     }
 
     joinSession();
 
-    // Handle WebSocket messages
     ws.onmessage = (event) => {
       const message = JSON.parse(event.data);
       if (message.code !== sessionCode) {
@@ -73,7 +74,6 @@
       handleAction(message);
     };
 
-    // Handle WebSocket actions
     function handleAction({ action, itemId, page }) {
       switch (action) {
         case 'playItem':
@@ -110,7 +110,6 @@
       }
     }
 
-    // Play a PDF
     function playPdf(item) {
       currentPdfSource = item.source;
       currentPage = 1;
@@ -119,28 +118,24 @@
       loadPdf(currentPdfSource);
     }
 
-    // Play a video
     function playVideo(item) {
       videoPlayer.src = item.source;
-      videoPlayer.volume = 1.0; // Set volume to maximum
+      videoPlayer.volume = 1.0;
       videoPlayer.style.display = 'block';
       pdfContainer.style.display = 'none';
       videoPlayer.play();
     }
 
-    // Load a PDF using PDF.js
     async function loadPdf(url) {
       pdfDoc = await getDocument(url).promise;
       renderPage(currentPage);
     }
 
-    // Render a specific page in the PDF
     async function renderPage(pageNum) {
       if (!pdfDoc) return;
       const page = await pdfDoc.getPage(pageNum);
       const viewport = page.getViewport({ scale });
 
-      // Adjust canvas size to fit the page
       pdfCanvas.height = viewport.height;
       pdfCanvas.width = viewport.width;
 
@@ -151,21 +146,18 @@
       await page.render(renderContext);
     }
 
-    // Go to the previous page in the PDF
     function goToPreviousPage() {
       if (currentPage <= 1) return;
       currentPage--;
       renderPage(currentPage);
     }
 
-    // Go to the next page in the PDF
     function goToNextPage() {
       if (currentPage >= pdfDoc.numPages) return;
       currentPage++;
       renderPage(currentPage);
     }
 
-    // Jump to a specific page in the PDF
     function jumpToPage(page) {
       if (!pdfDoc || page < 1 || page > pdfDoc.numPages) {
         console.error('PDF document is not loaded or invalid page number.');
