Adding SSL Support

--- a/src/public/control.html
+++ b/src/public/control.html
@@ -51,7 +51,7 @@
   </div>
 
   <script>
-    const ws = new WebSocket('ws://it.bisds.org/ws'); // WebSocket connection to your domain
+    const ws = new WebSocket('wss://it.bisds.org/ws'); // WebSocket connection to your domain
     let sessionCode = localStorage.getItem('sessionCode'); // Retrieve session code from localStorage
 
     // Set the session code on page load if available
